# amr_cobot

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run.sh
AMR_COBOT_urdf/: CMakeLists.txt  Dockerfile  entrypoint.sh  model.config  model.sdf  package.xml
AMR_COBOT_urdf/config/: arm_velocity_controller.yaml  joint_names_AMR_COBOT.yaml  ros2_controllers.yaml
AMR_COBOT_urdf/launch/: display.launch.py  gazebo.launch.py
AMR_COBOT_urdf/meshes/: 1_hand_Link.STL  2_hand_Link.STL  5_Link.STL  6_Link.STL  back_lidar_Link.STL  camera_Link.STL  flange_camera_Link.STL  front_lidar_Link.STL  hand_Link.STL  left_wheel_Link.STL  right_wheel_Link.STL
AMR_COBOT_urdf/scripts/: ros2_control_description_node
AMR_COBOT_urdf/urdf/: AMR_COBOT.csv  AMR_COBOT.gazebo  AMR_COBOT.rviz  AMR_COBOT.urdf
AMR_COBOT_urdf/worlds/: amr_cobot_with_cnc.world
amr_cobot_moveit_config/: CMakeLists.txt  package.xml
amr_cobot_moveit_config/config/: amr_cobot.srdf  joint_limits.yaml  kinematics.yaml  servo.yaml
amr_cobot_moveit_config/launch/: servo.launch.py
amr_cobot_teleop/: package.xml  setup.cfg  setup.py
amr_cobot_teleop/amr_cobot_teleop/: joint_state_extras_node.py  joint_state_mux_node.py  ros2_control_description_node.py  servo_start_client_node.py  teleop_tcp_node.py
amr_cobot_teleop/config/: teleop_tcp.yaml
amr_cobot_teleop/launch/: demo.launch.py  teleop_tcp.launch.py
amr_cobot_teleop/resource/: amr_cobot_teleop
cnc_urdf/: CMakeLists.txt  model.config  model.sdf  package.xml
cnc_urdf/meshes/: april0_Link.dae  april0_tag.dae  april1_Link.dae  april1_tag.dae  apriltag0.ppm  apriltag0.wrl  apriltag1.ppm  apriltag1.wrl  base_link.dae  cnc.wrl
cnc_urdf/tools/: make_tag_assets.py  wrl_to_dae.py
cnc_urdf/urdf/: cnc_urdf.urdf
moveit/: Dockerfile
moveit/amr_cobot_moveit_config/: CMakeLists.txt  package.xml
moveit/amr_cobot_moveit_config/config/: amr_cobot.srdf  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_pipelines.yaml
moveit/amr_cobot_moveit_config/launch/: move_group.launch.py  move_group.launch.xml
