<?xml version="1.0"?>
<package format="3">
  <name>amr_cobot_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt 2 configuration for AMR_COBOT (manipulator + tool0).</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>amr_cobot</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>amr_cobot_teleop</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


