<?xml version="1.0"?>
<package format="3">
  <name>amr_cobot_teleop</name>
  <version>0.1.0</version>
  <description>Joystick teleop: /joy -> TwistStamped in tool0 for MoveIt Servo.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>amr_cobot</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


